# cosc-4353-project

./: .gitignore  CMakeLists.txt  README.md  main.cpp  sqlite3_wrapper.c
.github/workflows/: autoCompile.yml
sub pages/: account.h  admin.h  calender.h  databaseManager.h  export report.cpp  export report.h  join_queue.h  queue_management.h  queues.h  service_management.h  user_dashboard.h
